# Vigilant

./: README.md  pyproject.toml  requirements.txt  setup.py
scanner/: __init__.py  cli.py  crawler.py  http_client.py  main.py
scanner/analysis/: __init__.py  cookies.py  discovery.py  fingerprint.py  forms.py  headers.py  sql_injection.py  xss.py
scanner/reporting/: __init__.py  report_builder.py
scanner/utils/: html.py  logging.py  url.py  wordlists.py
