[project]
name = "lightscan"
version = "0.1.0"
description = "Lightweight Non-Intrusive Web Vulnerability Scanner (Educational)"
authors = [{ name="Security Intern", email="example@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "html5lib",
    "jinja2>=3.1.2"
]

[project.scripts]
lightscan = "scanner.cli:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
